fix: Schedules link and hero menu wrap

--- a/src/assets/styles/components/hero.scss
+++ b/src/assets/styles/components/hero.scss
@@ -63,6 +63,7 @@
     align-items: center;
     justify-content: center;
     gap: 1em;
+    flex-wrap: wrap;
     a {
       color: $text;
       font-size: x-large;
